# knn_handwriteDigitsClassify

./: CMakeLists.txt  readme.md
include/: knn_handwriteDigitsClassifyer.h
src/: CMakeLists.txt  knn_handwriteDigitsClassifyer.cpp  runTest.cpp
